--- a/.generator/src/generator/templates/model_generic.j2
+++ b/.generator/src/generator/templates/model_generic.j2
@@ -241,10 +241,9 @@
     end
     {%- endif %}
 {%- endfor %}
-{%- if additionalProperties is not false %}
-
-    # Returns the object in the form of hash, with additionalProperties support.
-    # @return [Hash] Returns the object in the form of hash
+{%- if additionalProperties is false %}
+   # Returns the object in the form of hash without additionalProperties support
+    # @return [Hash] Returns the object in the form of hash 
     # @!visibility private
     def to_hash
       hash = {}
@@ -256,9 +255,6 @@
         end
 
         hash[param] = _to_hash(value)
-      end
-      self.additional_properties.each_pair do |attr, value|
-        hash[attr] = value
       end
       hash
     end
