--- a/.generator/src/generator/templates/model_base.j2
+++ b/.generator/src/generator/templates/model_base.j2
@@ -48,7 +48,7 @@ module {{ module_name }}::{{ version|upper }}
       return nil unless attributes.is_a?(Hash)
       unless self.respond_to?(:additional_properties)
         unless attributes.keys.all? { |key| self.class.openapi_types.key?(key) }
-          raise SchemaMismatchError, "Additional properties are not allowed"
+          return nil
         end
       end
       self.class.openapi_types.each_pair do |key, type|
@@ -150,7 +150,7 @@ module {{ module_name }}::{{ version|upper }}
       to_hash
     end
 
-    # Returns the object in the form of hash, with additionalProperties support.
+    # Returns the object in the form of hash
     # @return [Hash] Returns the object in the form of hash
     # @!visibility private
     def to_hash
@@ -163,9 +163,6 @@ module {{ module_name }}::{{ version|upper }}
         end
 
         hash[param] = _to_hash(value)
-      end
-      self.additional_properties.each_pair do |attr, value|
-        hash[attr] = value
       end
       hash
     end
