--- a/.generator/src/generator/templates/model_base.j2
+++ b/.generator/src/generator/templates/model_base.j2
@@ -48,7 +48,7 @@ module {{ module_name }}::{{ version|upper }}
       return nil unless attributes.is_a?(Hash)
       unless self.respond_to?(:additional_properties)
         unless attributes.keys.all? { |key| self.class.openapi_types.key?(key) }
-          return nil
+          raise SchemaMismatchError, "Additional properties are not allowed"
         end
       end
       self.class.openapi_types.each_pair do |key, type|
