--- a/.generator/src/generator/templates/inflector.j2
+++ b/.generator/src/generator/templates/inflector.j2
@@ -18,7 +18,7 @@ module {{ module_name }}
         # APIs
         {%- for version, apis in all_apis.items() %}
         {%- for api in apis|sort %}
-        {%- set name = api.replace(" ", "") + "API" %}
+        {%- set name = api|class_name %}
         "{{ version }}.{{ api|snake_case }}_api" => "{{ name }}"{%-if not loop.last %},{% endif %}
         {%- endfor %}{%-if not loop.last %},{% endif %}
         {%- endfor %}
