--- a/.generator/src/generator/templates/configuration.j2
+++ b/.generator/src/generator/templates/configuration.j2
@@ -312,7 +312,7 @@ module {{ module_name }}
     # Returns an array of Server setting
 {%- macro server_configuration(server) -%}
 {
-  url: "{{ server.url }}",
+  url: +"{{ server.url }}",
   description: "{{ server.description|default("No description provided") }}",
   variables: {
   {%- for name, variable in server.get("variables", {}).items() %}
@@ -353,7 +353,7 @@ module {{ module_name }}
         "{{ version }}.{{ operation.operationId|snake_case }}": [
         {%- endif %}
           {{ server_configuration(server)|indent(10) }}{% if not loop.last %},{% endif %}
-        {%- if loop.last %}  
+        {%- if loop.last %}
         ],
         {%- endif %}
         {%- endfor %}
