--- a/.generator/src/generator/templates/model_generic.j2
+++ b/.generator/src/generator/templates/model_generic.j2
@@ -16,7 +16,9 @@
      or
       definition.enum is defined #}
 
+{%- if "description" in definition %}
     {{ definition.description|block_comment|indent(4) }}
+{%- endif %}
     {%- if has_validation %}
     attr_reader :{{ attr|attribute_name }}
     {%- else %}
