--- a/.generator/src/generator/templates/model_generic.j2
+++ b/.generator/src/generator/templates/model_generic.j2
@@ -17,6 +17,7 @@
       definition.enum is defined #}
 
 {%- if "description" in definition %}
+{# preserve blank line #}
     {{ definition.description|block_comment|indent(4) }}
 {%- endif %}
     {%- if has_validation %}
