Allow missing descriptions. (#2730)
* Allow missing descriptions.

* pre-commit fixes

* Preserve blank line.

* Restore lines.

---------

Co-authored-by: ci.datadog-api-spec <packages@datadoghq.com>

--- a/.generator/src/generator/templates/model_generic.j2
+++ b/.generator/src/generator/templates/model_generic.j2
@@ -16,7 +16,10 @@
      or
       definition.enum is defined #}
 
+{%- if "description" in definition %}
+{# preserve blank line #}
     {{ definition.description|block_comment|indent(4) }}
+{%- endif %}
     {%- if has_validation %}
     attr_reader :{{ attr|attribute_name }}
     {%- else %}
